--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="icon" href="http://localhost/softbill/favicon.ico" type="image/x-icon" />
-        <title>SOFTBILL | ERROR 404</title>
+        <link rel="icon" href="http://localhost/zanhid/favicon.ico" type="image/x-icon" />
+        <title>ZANHID | ERROR 404</title>
         <style type="text/css">
             @font-face {
                 font-family: "Segoe UI Light";
-                src: url(http://localhost/softbill/css/fonts/segoeuil.ttf);
+                src: url(http://localhost/zanhid/css/fonts/segoeuil.ttf);
             }
 
             * {
@@ -55,14 +55,14 @@
     </head>
     <body>
         <div class="content">
-            <div class="error404image"> <img src="http://localhost/softbill/images/404.jpg" width="345" height="380"> </div>
+            <div class="error404image"> <img src="http://localhost/zanhid/images/404.jpg" width="345" height="380"> </div>
             <h1>Oops!</h1>
             <p>Error 404 - Page not found.</p>
             <p> The page you are looking for is not available.</p>
         </div>
         <div style="clear: both"></div>
         <div class="footer">
-            <p style="padding: 10px 15%;">softbill - &copy; Stemcom Technologies</p>
+            <p style="padding: 10px 15%;">zanhid - &copy; Stemcom Technologies</p>
             <!-- end .footer --></div>
 
     </body>
